--- a/roadmap/README
+++ b/roadmap/README
@@ -126,9 +126,12 @@ INSTALLATION
    By default, RoadMap uses the expat library to load GPX trip and landmark
    files. RoadMap can be built without expat using the make option: EXPAT=NO.
 
-   Likewise, RoadMap will use the agg library to render angled text
-   when labeling streets.  If you don't have agg, RoadMap will label
-   with horizontal strings.  Use: AGG=NO.
+   Likewise, RoadMap will use the agg library to render angled text when
+   labeling streets.  If you don't have agg, RoadMap will label with
+   horizontal strings.  Use:  AGG=NO.  RoadMap requires version 2.4 of the
+   agg library -- 2.3 is incompatible.  If your linux distribution includes
+   2.3, make sure that if you install 2.4 as well, that RoadMap finds both
+   headers and libraries from 2.4.
 
 
 * WINDOWS SPECIFIC DEPENDENCIES AND LIMITATIONS
